--- a/src/lsp/config.lsp.in
+++ b/src/lsp/config.lsp.in
@@ -68,11 +68,14 @@ Returns, as a string, the version of the software under which ECL runs."
 ;; * Set configuration pathnames. Notice the trailing slash!
 ;;   Otherwise it would not be a directory.
 ;;
-#-(and mingw32 msvc)
-(si::pathname-translations "SYS" '(("**;*.*" "@ecldir@/**/*.*")))
-#+(or mingw32 msvc)
-(si::pathname-translations "SYS"
-  `(("**;*.*" ,(merge-pathnames "**/*.*" (si::get-library-pathname)))))
+#-ecl-min
+(progn
+  #-(and mingw32 msvc)
+  (si::pathname-translations "SYS" '(("**;*.*" "@ecldir@/**/*.*")))
+  #+(or mingw32 msvc)
+  (si::pathname-translations "SYS"
+			     `(("**;*.*" ,(merge-pathnames "**/*.*" (si::get-library-pathname)))))
+);#-eclmin
 #-msvc
 (si::pathname-translations "HOME" '(("**;*.*" "~/**/*.*")))
 #+msvc
