Included support for multithreading under Windows/Cygwin.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -300,4 +300,11 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #  define PTHREAD_MUTEX_RECURSIVE_NP PTHREAD_MUTEX_RECURSIVE
 #  define PTHREAD_MUTEX_NORMAL_NP PTHREAD_MUTEX_NORMAL
 # endif
+# if defined(cygwin)
+#  define PTHREAD_MUTEX_FAST_NP PTHREAD_MUTEX_NORMAL
+#  define PTHREAD_MUTEX_RECURSIVE_NP PTHREAD_MUTEX_RECURSIVE
+#  define PTHREAD_MUTEX_ERRORCHECK_NP PTHREAD_MUTEX_ERRORCHECK
+#  define PTHREAD_MUTEX_TIMED_NP PTHREAD_MUTEX_NORMAL
+#  define PTHREAD_MUTEX_ADAPTIVE_NP PTHREAD_MUTEX_NORMAL
+# endif
 #endif
